# text-extractor

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  SPEC.md  TASKS.md  WARP.md  pyproject.toml  requirements.txt  test_plugin.py
.cursor/rules/: README.mdc  development-workflow.mdc  documentation-maintenance.mdc  python-standards.mdc  testing-standards.mdc  text-extraction-patterns.mdc
examples/: rtf_parser_plugin.py
tests/: __init__.py  test_async_parser.py  test_async_parser_factory.py  test_async_parsers.py  test_async_parsers_edge_cases.py  test_csv_parser.py  test_csv_parser_edge_cases.py  test_docx_parser.py  test_image_parser.py  test_integration.py  test_language_detection.py  test_language_detection_edge_cases.py  test_main.py  test_models.py  test_parser_factory.py  test_parser_factory_plugins.py  test_pdf_parser.py  test_plugin_registry.py  test_plugin_registry_edge_cases.py  test_schema.py  test_txt_parser.py  test_txt_parser_edge_cases.py  test_utils.py  test_utils_edge_cases.py
tests/fixtures/: sample.csv  sample.txt
text_extractor/: __init__.py  __main__.py  async_parser_factory.py  language_detection.py  models.py  parser_factory.py  plugin_registry.py  utils.py
text_extractor/async_parsers/: __init__.py  async_csv_parser.py  async_docx_parser.py  async_image_parser.py  async_pdf_parser.py  async_txt_parser.py
text_extractor/parsers/: __init__.py  csv_parser.py  docx_parser.py  image_parser.py  pdf_parser.py  txt_parser.py
